Changing how homescreen works

--- a/MFD40x20.cfg
+++ b/MFD40x20.cfg
@@ -34,10 +34,11 @@ MODULE
 	PAGE
 	{
 		name = menuDefault
-		text = TahvohckMFD/pages/menuDefault.txt
+		text = TahvohckMFD/pages/menuHomeScreen.txt
+		localMargins = 0,1,0,0
 		textureURL = Hyomoto/MFD/images/genericBg
 		textureOverlayURL = Hyomoto/MFD/images/genericOverlay
-		textOverlay = TahvohckMFD/pages/menuOverlayBase.txt
+		textOverlay = TahvohckMFD/pages/overlayPrimaryButtonsTOP.txt
 		default = yes
 		disableSwitchingTo = btn1, btn2, btn3, btn4, btn5, btn6, btn7, btn8, btn9, btn10, up, down, enter, escape, home
 		CONTEXTREDIRECT
