Decided against calling the button_HOME redirect 'top'

--- a/MFD40x20.cfg
+++ b/MFD40x20.cfg
@@ -270,11 +270,10 @@ MODULE
 		text = Hyomoto/MFD/pages/badRedirect.txt
 	}
 
-	//Calling this different from Hyomoto to make it match the model better.
 	PAGE
 	{
 		button = button_HOME
-		name = top
+		name = home
 		text = Hyomoto/MFD/pages/badRedirect.txt
 	}
 
