Made FLIGHT menu use MFD Nav overlay

--- a/MFD40x20.cfg
+++ b/MFD40x20.cfg
@@ -31,7 +31,7 @@ MODULE
 	noSignalTextureURL = Hyomoto/MFD/images/nosignal
 
 // --------------------Startup Page-----------------------------------
-	PAGE
+	PAGE // Home page
 	{
 		name = menuDefault
 		text = TahvohckMFD/pages/menuHomeScreen.txt
@@ -47,7 +47,7 @@ MODULE
 		}
 	}
 
-	PAGE
+	PAGE // Shutdown page
 	{
 		name = sleepPage
 		text = _
@@ -79,14 +79,15 @@ MODULE
 
 // --------------------Page A Functions-------------------------------
 // Page A is flight controls
-	PAGE
+	PAGE // Flight 
 	{
 		button = button_A
 		name = menuFlight
 		text = TahvohckMFD/pages/menuFlight.txt
+		localMargins = 0,1,0,0
 		textureURL = Hyomoto/MFD/images/genericBg
 		textureOverlayURL = Hyomoto/MFD/images/genericOverlay
-		textOverlay = TahvohckMFD/pages/menuOverlayBase.txt
+		textOverlay = TahvohckMFD/pages/overlayPrimaryButtonsTOP.txt
 		disableSwitchingTo = btn1, btn2, btn3, btn4, btn5, btn6, btn7, btn8, btn9, btn10, up, down, enter, escape, home
 		CONTEXTREDIRECT
 		{
