Added page definitions for all top level menus

--- a/MFD40x20.cfg
+++ b/MFD40x20.cfg
@@ -77,13 +77,14 @@ MODULE
 		}
 	}
 
+// -------------------------------------------------------------------
 // --------------------Page A Functions-------------------------------
 // Page A is flight controls
 	PAGE // Flight 
 	{
 		button = button_A
 		name = menuFlight
-		text = TahvohckMFD/pages/menuFlight.txt
+		text = TahvohckMFD/pages/menuFLIGHT.txt
 		textureURL = Hyomoto/MFD/images/genericBg
 		textureOverlayURL = Hyomoto/MFD/images/genericOverlay
 		textOverlay = TahvohckMFD/pages/overlayPrimaryButtonsTOP.txt
@@ -129,9 +130,29 @@ MODULE
 		}
 	}
 	
+// -------------------------------------------------------------------
+// --------------------Page B Functions-------------------------------
+// Page B is Information Systems
+	PAGE // Info
+	{
+		button = button_B
+		name = menuInfo
+		text = TahvohckMFD/pages/menuINFO.txt
+		textureURL = Hyomoto/MFD/images/genericBg
+		textureOverlayURL = Hyomoto/MFD/images/genericOverlay
+		textOverlay = TahvohckMFD/pages/overlayPrimaryButtonsTOP.txt
+		localMargins = 0,1,0,0
+		disableSwitchingTo = btn1, btn2, btn3, btn4, btn5, btn6, btn7, btn8, btn9, btn10, up, down, enter, escape, home
+		CONTEXTREDIRECT
+		{
+			redirect = escape,	menuDefault
+			redirect = home,	menuDefault
+		}
+	}
+	
 	PAGE // Orbit data
 	{
-		name = flightOrbit
+		name = infoOrbit
 		text = Hyomoto/MFD/pages/infoOrbit.txt
 		textureOverlayURL = Hyomoto/MFD/images/genericOverlay
 		textOverlay = Hyomoto/MFD/pages/menuOverlay.txt
@@ -164,6 +185,66 @@ MODULE
 			redirect = btn4,   flightLanding
 			redirect = escape, menuFlight
 			redirect = home,   menuDefault
+		}
+	}
+	
+// -------------------------------------------------------------------
+// --------------------Page C Functions-------------------------------
+// Page C is Target Control
+	PAGE // Target
+	{
+		button = button_C
+		name = menuTarget
+		text = TahvohckMFD/pages/menuTARGET.txt
+		textureURL = Hyomoto/MFD/images/genericBg
+		textureOverlayURL = Hyomoto/MFD/images/genericOverlay
+		textOverlay = TahvohckMFD/pages/overlayPrimaryButtonsTOP.txt
+		localMargins = 0,1,0,0
+		disableSwitchingTo = btn1, btn2, btn3, btn4, btn5, btn6, btn7, btn8, btn9, btn10, up, down, enter, escape, home
+		CONTEXTREDIRECT
+		{
+			redirect = escape,	menuDefault
+			redirect = home,	menuDefault
+		}
+	}
+	
+// -------------------------------------------------------------------
+// --------------------Page D Functions-------------------------------
+// Page B is Camera Control
+	PAGE // Cameras
+	{
+		button = button_D
+		name = menuCameras
+		text = TahvohckMFD/pages/menuCAMERAS.txt
+		textureURL = Hyomoto/MFD/images/genericBg
+		textureOverlayURL = Hyomoto/MFD/images/genericOverlay
+		textOverlay = TahvohckMFD/pages/overlayPrimaryButtonsTOP.txt
+		localMargins = 0,1,0,0
+		disableSwitchingTo = btn1, btn2, btn3, btn4, btn5, btn6, btn7, btn8, btn9, btn10, up, down, enter, escape, home
+		CONTEXTREDIRECT
+		{
+			redirect = escape,	menuDefault
+			redirect = home,	menuDefault
+		}
+	}
+	
+// -------------------------------------------------------------------
+// --------------------Page E Functions-------------------------------
+// Page E is Plugin Selection
+	PAGE // Plugins
+	{
+		button = button_E
+		name = menuFlight
+		text = TahvohckMFD/pages/PageNotExist.txt
+		textureURL = Hyomoto/MFD/images/genericBg
+		textureOverlayURL = Hyomoto/MFD/images/genericOverlay
+		textOverlay = TahvohckMFD/pages/overlayPrimaryButtonsTOP.txt
+		localMargins = 0,1,0,0
+		disableSwitchingTo = btn1, btn2, btn3, btn4, btn5, btn6, btn7, btn8, btn9, btn10, up, down, enter, escape, home
+		CONTEXTREDIRECT
+		{
+			redirect = escape,	menuDefault
+			redirect = home,	menuDefault
 		}
 	}
 // --------------------Dummy Buttons----------------------------------
