Added page definitions for takeoff and landing

--- a/MFD40x20.cfg
+++ b/MFD40x20.cfg
@@ -93,6 +93,8 @@ MODULE
 		CONTEXTREDIRECT
 		{
 			redirect = btn1,	flightDisplay
+			redirect = btn2,	fpTakeoff
+			redirect = btn3,	fpLanding
 			redirect = escape,	menuDefault
 			redirect = home,	menuDefault
 		}
@@ -125,8 +127,48 @@ MODULE
 		}
 		CONTEXTREDIRECT
 		{
-			redirect = escape, menuFlight
-			redirect = home,   menuDefault
+			redirect = btn2,	fpTakeoff
+			redirect = btn3,	fpLanding
+			redirect = escape,	menuFlight
+			redirect = home,	menuDefault
+		}
+	}
+
+	PAGE // Takeoff information
+	{
+		name = fpTakeoff
+		text = TahvohckMFD/pages/flightPageTakeoff.txt
+		textureURL = Hyomoto/MFD/images/genericBg
+		textureOverlayURL = Hyomoto/MFD/images/genericOverlay
+		textOverlay = TahvohckMFD/pages/overlayPrimaryButtons.txt
+		localMargins = 0,1,0,0
+		disableSwitchingTo = btn1, btn2, btn3, btn4, btn5, btn6, btn7, btn8, btn9, btn10, up, down, enter, escape, home
+		
+		CONTEXTREDIRECT
+		{
+			redirect = btn1,	flightDisplay
+			redirect = btn3,	fpLanding
+			redirect = escape,	menuFlight
+			redirect = home,	menuDefault
+		}
+	}
+
+	PAGE // Landing information
+	{
+		name = fpLanding
+		text = TahvohckMFD/pages/flightPageLanding.txt
+		textureURL = Hyomoto/MFD/images/genericBg
+		textureOverlayURL = Hyomoto/MFD/images/genericOverlay
+		textOverlay = TahvohckMFD/pages/overlayPrimaryButtons.txt
+		localMargins = 0,1,0,0
+		disableSwitchingTo = btn1, btn2, btn3, btn4, btn5, btn6, btn7, btn8, btn9, btn10, up, down, enter, escape, home
+		
+		CONTEXTREDIRECT
+		{
+			redirect = btn1,	flightDisplay
+			redirect = btn2,	fpTakeoff
+			redirect = escape,	menuFlight
+			redirect = home,	menuDefault
 		}
 	}
 	
