--- a/MFD40x20.cfg
+++ b/MFD40x20.cfg
@@ -187,6 +187,7 @@ MODULE
 		disableSwitchingTo = btn1, btn2, btn3, btn4, btn5, btn6, btn7, btn8, btn9, btn10, up, down, enter, escape, home
 		CONTEXTREDIRECT
 		{
+			redirect = btn2,	infoResources_1
 			redirect = escape,	menuDefault
 			redirect = home,	menuDefault
 		}
@@ -222,8 +223,96 @@ MODULE
 		}
 		CONTEXTREDIRECT
 		{
-			redirect = escape, menuFlight
+			redirect = escape, menuInfo
 			redirect = home,   menuDefault
+		}
+	}
+	
+	PAGE // Resources data, most common
+	{
+		name = infoResources_common
+		text = TahvohckMFD/pages/PageNotExist.txt
+		textureURL = Hyomoto/MFD/images/genericBg
+		textureOverlayURL = Hyomoto/MFD/images/genericOverlay
+		textOverlay = TahvohckMFD/pages/overlayPrimaryButtonsTOP.txt
+		localMargins = 0,1,0,0
+		disableSwitchingTo = btn1, btn2, btn3, btn4, btn5, btn6, btn7, btn8, btn9, btn10, up, down, enter, escape, home
+		
+		CONTEXTREDIRECT
+		{
+			redirect = btn6,	infoResources_common
+			redirect = btn7,	infoResources_1
+			redirect = btn8,	infoResources_2
+			redirect = btn9,	infoResources_3
+			redirect = btn10,	infoResources_?
+			redirect = escape,	menuInfo
+			redirect = home,	menuDefault
+		}
+	}
+	
+	PAGE // Resources data, page one
+	{
+		name = infoResources_1
+		text = TahvohckMFD/pages/infoPageResources_1.txt
+		textureURL = Hyomoto/MFD/images/genericBg
+		textureOverlayURL = Hyomoto/MFD/images/genericOverlay
+		textOverlay = TahvohckMFD/pages/overlayPrimaryButtonsTOP.txt
+		localMargins = 0,1,0,0
+		disableSwitchingTo = btn1, btn2, btn3, btn4, btn5, btn6, btn7, btn8, btn9, btn10, up, down, enter, escape, home
+		
+		CONTEXTREDIRECT
+		{
+			redirect = btn6,	infoResources_common
+			redirect = btn7,	infoResources_1
+			redirect = btn8,	infoResources_2
+			redirect = btn9,	infoResources_3
+			redirect = btn10,	infoResources_?
+			redirect = escape,	menuInfo
+			redirect = home,	menuDefault
+		}
+	}
+	
+	PAGE // Resources data, page two
+	{
+		name = infoResources_2
+		text = TahvohckMFD/pages/infoPageResources_2.txt
+		textureURL = Hyomoto/MFD/images/genericBg
+		textureOverlayURL = Hyomoto/MFD/images/genericOverlay
+		textOverlay = TahvohckMFD/pages/overlayPrimaryButtonsTOP.txt
+		localMargins = 0,1,0,0
+		disableSwitchingTo = btn1, btn2, btn3, btn4, btn5, btn6, btn7, btn8, btn9, btn10, up, down, enter, escape, home
+		
+		CONTEXTREDIRECT
+		{
+			redirect = btn6,	infoResources_common
+			redirect = btn7,	infoResources_1
+			redirect = btn8,	infoResources_2
+			redirect = btn9,	infoResources_3
+			redirect = btn10,	infoResources_?
+			redirect = escape,	menuInfo
+			redirect = home,	menuDefault
+		}
+	}
+	
+	PAGE // Resources data, page three (You should _really_ not need this)
+	{
+		name = infoResources_3
+		text = TahvohckMFD/pages/infoPageResources_3.txt
+		textureURL = Hyomoto/MFD/images/genericBg
+		textureOverlayURL = Hyomoto/MFD/images/genericOverlay
+		textOverlay = TahvohckMFD/pages/overlayPrimaryButtonsTOP.txt
+		localMargins = 0,1,0,0
+		disableSwitchingTo = btn1, btn2, btn3, btn4, btn5, btn6, btn7, btn8, btn9, btn10, up, down, enter, escape, home
+		
+		CONTEXTREDIRECT
+		{
+			redirect = btn6,	infoResources_common
+			redirect = btn7,	infoResources_1
+			redirect = btn8,	infoResources_2
+			redirect = btn9,	infoResources_3
+			redirect = btn10,	infoResources_?
+			redirect = escape,	menuInfo
+			redirect = home,	menuDefault
 		}
 	}
 	
