--- a/MFD40x20.cfg
+++ b/MFD40x20.cfg
@@ -187,6 +187,7 @@ MODULE
 		disableSwitchingTo = btn1, btn2, btn3, btn4, btn5, btn6, btn7, btn8, btn9, btn10, up, down, enter, escape, home
 		CONTEXTREDIRECT
 		{
+			redirect = btn1,	infoOrbit
 			redirect = btn2,	infoResources_1
 			redirect = escape,	menuDefault
 			redirect = home,	menuDefault
@@ -240,6 +241,7 @@ MODULE
 		
 		CONTEXTREDIRECT
 		{
+			redirect = btn1,	infoOrbit
 			redirect = btn6,	infoResources_common
 			redirect = btn7,	infoResources_1
 			redirect = btn8,	infoResources_2
@@ -262,6 +264,7 @@ MODULE
 		
 		CONTEXTREDIRECT
 		{
+			redirect = btn1,	infoOrbit
 			redirect = btn6,	infoResources_common
 			redirect = btn7,	infoResources_1
 			redirect = btn8,	infoResources_2
@@ -284,6 +287,7 @@ MODULE
 		
 		CONTEXTREDIRECT
 		{
+			redirect = btn1,	infoOrbit
 			redirect = btn6,	infoResources_common
 			redirect = btn7,	infoResources_1
 			redirect = btn8,	infoResources_2
@@ -306,6 +310,7 @@ MODULE
 		
 		CONTEXTREDIRECT
 		{
+			redirect = btn1,	infoOrbit
 			redirect = btn6,	infoResources_common
 			redirect = btn7,	infoResources_1
 			redirect = btn8,	infoResources_2
