Making button 2 work on all resource pages

--- a/MFD40x20.cfg
+++ b/MFD40x20.cfg
@@ -242,6 +242,7 @@ MODULE
 		CONTEXTREDIRECT
 		{
 			redirect = btn1,	infoOrbit
+			redirect = btn2,	infoResources_1
 			redirect = btn6,	infoResources_common
 			redirect = btn7,	infoResources_1
 			redirect = btn8,	infoResources_2
@@ -265,6 +266,7 @@ MODULE
 		CONTEXTREDIRECT
 		{
 			redirect = btn1,	infoOrbit
+			redirect = btn2,	infoResources_1
 			redirect = btn6,	infoResources_common
 			redirect = btn7,	infoResources_1
 			redirect = btn8,	infoResources_2
@@ -288,6 +290,7 @@ MODULE
 		CONTEXTREDIRECT
 		{
 			redirect = btn1,	infoOrbit
+			redirect = btn2,	infoResources_1
 			redirect = btn6,	infoResources_common
 			redirect = btn7,	infoResources_1
 			redirect = btn8,	infoResources_2
@@ -311,6 +314,7 @@ MODULE
 		CONTEXTREDIRECT
 		{
 			redirect = btn1,	infoOrbit
+			redirect = btn2,	infoResources_1
 			redirect = btn6,	infoResources_common
 			redirect = btn7,	infoResources_1
 			redirect = btn8,	infoResources_2
