Added redirect on orbit page to resource pages

--- a/MFD40x20.cfg
+++ b/MFD40x20.cfg
@@ -224,8 +224,9 @@ MODULE
 		}
 		CONTEXTREDIRECT
 		{
-			redirect = escape, menuInfo
-			redirect = home,   menuDefault
+			redirect = escape,	menuInfo
+			redirect = btn2,	infoResources_1
+			redirect = home,	menuDefault
 		}
 	}
 	
