Happy with this initial mission page now.

--- a/MFD40x20.cfg
+++ b/MFD40x20.cfg
@@ -189,6 +189,8 @@ MODULE
 		{
 			redirect = btn1,	infoOrbit
 			redirect = btn2,	infoResources_1
+			redirect = btn3,	infoMission
+			
 			redirect = escape,	menuDefault
 			redirect = home,	menuDefault
 		}
@@ -224,8 +226,10 @@ MODULE
 		}
 		CONTEXTREDIRECT
 		{
-			redirect = escape,	menuInfo
 			redirect = btn2,	infoResources_1
+			redirect = btn3,	infoMission
+			
+			redirect = escape,	menuInfo
 			redirect = home,	menuDefault
 		}
 	}
@@ -244,11 +248,14 @@ MODULE
 		{
 			redirect = btn1,	infoOrbit
 			redirect = btn2,	infoResources_1
+			redirect = btn3,	infoMission
+			
 			redirect = btn6,	infoResources_common
 			redirect = btn7,	infoResources_1
 			redirect = btn8,	infoResources_2
 			redirect = btn9,	infoResources_3
 			redirect = btn10,	infoResources_?
+			
 			redirect = escape,	menuInfo
 			redirect = home,	menuDefault
 		}
@@ -268,11 +275,14 @@ MODULE
 		{
 			redirect = btn1,	infoOrbit
 			redirect = btn2,	infoResources_1
+			redirect = btn3,	infoMission
+			
 			redirect = btn6,	infoResources_common
 			redirect = btn7,	infoResources_1
 			redirect = btn8,	infoResources_2
 			redirect = btn9,	infoResources_3
 			redirect = btn10,	infoResources_?
+			
 			redirect = escape,	menuInfo
 			redirect = home,	menuDefault
 		}
@@ -292,11 +302,14 @@ MODULE
 		{
 			redirect = btn1,	infoOrbit
 			redirect = btn2,	infoResources_1
+			redirect = btn3,	infoMission
+			
 			redirect = btn6,	infoResources_common
 			redirect = btn7,	infoResources_1
 			redirect = btn8,	infoResources_2
 			redirect = btn9,	infoResources_3
 			redirect = btn10,	infoResources_?
+			
 			redirect = escape,	menuInfo
 			redirect = home,	menuDefault
 		}
@@ -316,11 +329,36 @@ MODULE
 		{
 			redirect = btn1,	infoOrbit
 			redirect = btn2,	infoResources_1
+			redirect = btn3,	infoMission
+			
 			redirect = btn6,	infoResources_common
 			redirect = btn7,	infoResources_1
 			redirect = btn8,	infoResources_2
 			redirect = btn9,	infoResources_3
 			redirect = btn10,	infoResources_?
+			
+			redirect = escape,	menuInfo
+			redirect = home,	menuDefault
+		}
+	}
+	
+	PAGE // Mission data
+	{
+		name = infoMission
+		text = TahvohckMFD/pages/infoPageMission.txt
+		textureURL = Hyomoto/MFD/images/genericBg
+		textureOverlayURL = Hyomoto/MFD/images/genericOverlay
+		textOverlay = TahvohckMFD/pages/overlayPrimaryButtonsTOP.txt
+		localMargins = 0,1,0,0
+		disableSwitchingTo = btn1, btn2, btn3, btn4, btn5, btn6, btn7, btn8, btn9, btn10, up, down, enter, escape, home
+		
+		CONTEXTREDIRECT
+		{
+			redirect = btn1,	infoOrbit
+			redirect = btn2,	infoResources_1
+			redirect = btn4,	infoCrewRoster
+			redirect = btn5,	infoAltgraph
+			
 			redirect = escape,	menuInfo
 			redirect = home,	menuDefault
 		}
