Crew roster cfg setup

--- a/MFD40x20.cfg
+++ b/MFD40x20.cfg
@@ -190,6 +190,7 @@ MODULE
 			redirect = btn1,	infoOrbit
 			redirect = btn2,	infoResources_1
 			redirect = btn3,	infoMission
+			redirect = btn4,	infoCrewRoster
 			
 			redirect = escape,	menuDefault
 			redirect = home,	menuDefault
@@ -228,6 +229,7 @@ MODULE
 		{
 			redirect = btn2,	infoResources_1
 			redirect = btn3,	infoMission
+			redirect = btn4,	infoCrewRoster
 			
 			redirect = escape,	menuInfo
 			redirect = home,	menuDefault
@@ -249,6 +251,7 @@ MODULE
 			redirect = btn1,	infoOrbit
 			redirect = btn2,	infoResources_1
 			redirect = btn3,	infoMission
+			redirect = btn4,	infoCrewRoster
 			
 			redirect = btn6,	infoResources_common
 			redirect = btn7,	infoResources_1
@@ -275,6 +278,7 @@ MODULE
 		{
 			redirect = btn1,	infoOrbit
 			redirect = btn3,	infoMission
+			redirect = btn4,	infoCrewRoster
 			
 			redirect = btn6,	infoResources_common
 			redirect = btn7,	infoResources_1
@@ -302,6 +306,7 @@ MODULE
 			redirect = btn1,	infoOrbit
 			redirect = btn2,	infoResources_1
 			redirect = btn3,	infoMission
+			redirect = btn4,	infoCrewRoster
 			
 			redirect = btn6,	infoResources_common
 			redirect = btn7,	infoResources_1
@@ -329,6 +334,7 @@ MODULE
 			redirect = btn1,	infoOrbit
 			redirect = btn2,	infoResources_1
 			redirect = btn3,	infoMission
+			redirect = btn4,	infoCrewRoster
 			
 			redirect = btn6,	infoResources_common
 			redirect = btn7,	infoResources_1
@@ -356,6 +362,28 @@ MODULE
 			redirect = btn1,	infoOrbit
 			redirect = btn2,	infoResources_1
 			redirect = btn4,	infoCrewRoster
+			redirect = btn5,	infoAltgraph
+			
+			redirect = escape,	menuInfo
+			redirect = home,	menuDefault
+		}
+	}
+	
+	PAGE // Crew Roster
+	{
+		name = infoCrewRoster
+		text = TahvohckMFD/pages/infoPageCrewRoster.txt
+		textureURL = Hyomoto/MFD/images/genericBg
+		textureOverlayURL = Hyomoto/MFD/images/genericOverlay
+		textOverlay = TahvohckMFD/pages/overlayPrimaryButtonsTOP.txt
+		localMargins = 0,1,0,0
+		disableSwitchingTo = btn1, btn2, btn3, btn4, btn5, btn6, btn7, btn8, btn9, btn10, up, down, enter, escape, home
+		
+		CONTEXTREDIRECT
+		{
+			redirect = btn1,	infoOrbit
+			redirect = btn2,	infoResources_1
+			redirect = btn3,	infoMission
 			redirect = btn5,	infoAltgraph
 			
 			redirect = escape,	menuInfo
