config stub for altitude graph page

--- a/MFD40x20.cfg
+++ b/MFD40x20.cfg
@@ -191,6 +191,7 @@ MODULE
 			redirect = btn2,	infoResources_1
 			redirect = btn3,	infoMission
 			redirect = btn4,	infoCrewRoster
+			redirect = btn5,	infoAltgraph
 			
 			redirect = escape,	menuDefault
 			redirect = home,	menuDefault
@@ -230,6 +231,7 @@ MODULE
 			redirect = btn2,	infoResources_1
 			redirect = btn3,	infoMission
 			redirect = btn4,	infoCrewRoster
+			redirect = btn5,	infoAltgraph
 			
 			redirect = escape,	menuInfo
 			redirect = home,	menuDefault
@@ -252,6 +254,7 @@ MODULE
 			redirect = btn2,	infoResources_1
 			redirect = btn3,	infoMission
 			redirect = btn4,	infoCrewRoster
+			redirect = btn5,	infoAltgraph
 			
 			redirect = btn6,	infoResources_common
 			redirect = btn7,	infoResources_1
@@ -279,6 +282,7 @@ MODULE
 			redirect = btn1,	infoOrbit
 			redirect = btn3,	infoMission
 			redirect = btn4,	infoCrewRoster
+			redirect = btn5,	infoAltgraph
 			
 			redirect = btn6,	infoResources_common
 			redirect = btn7,	infoResources_1
@@ -307,6 +311,7 @@ MODULE
 			redirect = btn2,	infoResources_1
 			redirect = btn3,	infoMission
 			redirect = btn4,	infoCrewRoster
+			redirect = btn5,	infoAltgraph
 			
 			redirect = btn6,	infoResources_common
 			redirect = btn7,	infoResources_1
@@ -335,6 +340,7 @@ MODULE
 			redirect = btn2,	infoResources_1
 			redirect = btn3,	infoMission
 			redirect = btn4,	infoCrewRoster
+			redirect = btn5,	infoAltgraph
 			
 			redirect = btn6,	infoResources_common
 			redirect = btn7,	infoResources_1
@@ -385,6 +391,28 @@ MODULE
 			redirect = btn2,	infoResources_1
 			redirect = btn3,	infoMission
 			redirect = btn5,	infoAltgraph
+			
+			redirect = escape,	menuInfo
+			redirect = home,	menuDefault
+		}
+	}
+	
+	PAGE // Altitude grapher
+	{
+		name = infoAltgraph
+		text = TahvohckMFD/pages/infoPageAltGraph.txt
+		textureURL = Hyomoto/MFD/images/genericBg
+		textureOverlayURL = Hyomoto/MFD/images/genericOverlay
+		textOverlay = TahvohckMFD/pages/overlayPrimaryButtonsTOP.txt
+		localMargins = 0,1,0,0
+		disableSwitchingTo = btn1, btn2, btn3, btn4, btn5, btn6, btn7, btn8, btn9, btn10, up, down, enter, escape, home
+		
+		CONTEXTREDIRECT
+		{
+			redirect = btn1,	infoOrbit
+			redirect = btn2,	infoResources_1
+			redirect = btn3,	infoMission
+			redirect = btn4,	infoCrewRoster
 			
 			redirect = escape,	menuInfo
 			redirect = home,	menuDefault
