Fixed the PFD itself.

--- a/MFD40x20.cfg
+++ b/MFD40x20.cfg
@@ -111,19 +111,26 @@ MODULE
 		disableSwitchingTo = btn1, btn2, btn3, btn4, btn5, btn6, btn7, btn8, btn9, btn10, up, down, enter, escape, home
 		BACKGROUNDHANDLER
 		{
+			//general
 			name = JSIPrimaryFlightDisplay
 			method = RenderPFD
 			buttonClickMethod = ButtonProcessor
-			speedModeButton = 4
-			navBallModel = JSI/RasterPropMonitor/Library/Components/NavBall/NavBall
-			horizonTexture = JSI/RasterPropMonitor/Library/Components/NavBall/NavBall000
-			staticOverlay = Hyomoto/MFD/images/pfdStatic
-			headingBar = Hyomoto/MFD/images/pfdHeading
-			headingBarPosition = 0.0, 0.65, 0.4, 0.05
-			headingAboveOverlay = true
-			cameraSpan = 0.75
-			cameraShift = 0, -0.05
 			speedModeButton = 7
+			staticOverlay = TahvohckMFD/art/PFDOverlay_Recreation
+			
+			// NavBall
+			navBallModel = JSI/RasterPropMonitor/Library/Components/NavBall/NavBall
+			//horizonTexture = TahvohckMFD/art/HUDNav_Ball_BarkSands
+			horizonTexture = JSI/RasterPropMonitor/Library/Components/NavBall/NavBall000
+			navBallCenter =  480, 480
+			navBallDiameter = 668
+			markerSize = 84
+			
+			//Heading bar (Am I keeping this?)
+			headingBar = Hyomoto/MFD/images/pfdHeading
+			headingBarPosition = 479, 80, 200, 16
+			headingSpan = 0.125
+			headingAboveOverlay = false // Keeping this hidden for now
 		}
 		CONTEXTREDIRECT
 		{
