Made all number buttons global

--- a/MFD40x20.cfg
+++ b/MFD40x20.cfg
@@ -26,7 +26,7 @@ MODULE
 	
 	buttonClickSound = Hyomoto/MFD/beep
 	buttonClickVolume = 0.6
-	globalButtons = button_UP,button_DOWN,button_ENTER,button_ESC,button_HOME, buttonR8, buttonR9, buttonR10
+	globalButtons = button_UP,button_DOWN,button_ENTER,button_ESC,button_HOME, buttonR1, buttonR2, buttonR3, buttonR4, buttonR5, buttonR6, buttonR7, buttonR8, buttonR9, buttonR10
 	
 	noSignalTextureURL = Hyomoto/MFD/images/nosignal
 
@@ -115,7 +115,7 @@ MODULE
 			name = JSIPrimaryFlightDisplay
 			method = RenderPFD
 			buttonClickMethod = ButtonProcessor
-			speedModeButton = 7
+			speedModeButton = 14
 			staticOverlay = TahvohckMFD/art/PFDOverlay_Recreation
 			
 			// NavBall
