--- a/MFD40x20.cfg
+++ b/MFD40x20.cfg
@@ -732,7 +732,7 @@ MODULE
 		cameraTransform = CurrentReferenceDockingPortCamera
 		zoomFov = 5,45,8
 		zoomButtons = 1,0
-		text = Dcoking Cam
+		text = Docking Cam
 		textureOverlayURL = Hyomoto/MFD/images/dockingOverlay
 		textOverlay = TahvohckMFD/pages/overlayCAMERAS.txt
 		localMargins = 0,1,0,0
