--- a/MFD40x20.cfg
+++ b/MFD40x20.cfg
@@ -448,7 +448,7 @@ MODULE
 	
 // -------------------------------------------------------------------
 // --------------------Page D Functions-------------------------------
-// Page B is Camera Control
+// Page D is Camera Control
 	PAGE // Cameras
 	{
 		button = button_D
