Added target selection and control page.

--- a/MFD40x20.cfg
+++ b/MFD40x20.cfg
@@ -441,11 +441,48 @@ MODULE
 		disableSwitchingTo = btn1, btn2, btn3, btn4, btn5, btn6, btn7, btn8, btn9, btn10, up, down, enter, escape, home
 		CONTEXTREDIRECT
 		{
+			redirect = btn1,	tpSelect
 			redirect = escape,	menuDefault
 			redirect = home,	menuDefault
 		}
 	}
 	
+	PAGE // Target selection
+	{
+		name = tpSelect
+		textureURL = Hyomoto/MFD/images/genericBg
+		textureOverlayURL = Hyomoto/MFD/images/genericOverlay
+		textOverlay = TahvohckMFD/pages/overlayTargetSelection.txt
+		localMargins = 0,1,0,0
+		disableSwitchingTo = btn1, btn2, btn3, btn4, btn5, btn6, btn7, btn8, btn9, btn10, up, down, enter, escape, home
+		PAGEHANDLER
+		{
+			name = JSITargetMenu
+			method = ShowMenu
+			buttonClickMethod = ButtonProcessor
+			pageActiveMethod = PageActive
+			//pageTitle = Target Selection:
+			menuTitleFormatString = Target Selection: <=0=>
+			defaultFilter = 143
+			buttonUp =		0
+			buttonDown =	1
+			buttonEnter =	2
+			buttonEsc =		3
+			buttonHome = 	14
+			nameColor =			255,	255,	255,	255
+			distanceColor =		255,	255,	255,	255
+			selectedColor =		102,	200,	102,	255
+			unavailableColor =	100,	100,	100,	255
+			distanceColumn = 48
+			distanceColumnWidth = 10
+			distanceFormatString = <=0:SIP_9.3=>m
+		}
+		CONTEXTREDIRECT
+		{
+			redirect = btn1,	tpSelect
+			redirect = home,	menuDefault
+		}
+	}
 // -------------------------------------------------------------------
 // --------------------Page D Functions-------------------------------
 // Page D is Camera Control
