Changing config structure

--- a/MFDConfig-and-code-reuse.cfg
+++ b/MFDConfig-and-code-reuse.cfg
@@ -5,27 +5,54 @@ TahvMFDConfig
 	defaultWordsOverlay = TahvohckMFD/pages/overlayPrimaryButtonsTOP.txt
 	defaultMargins = 0,1,0,0
 	
-	CONTEXTREDIRECT
-	{
-		name = flightPageRedirects
-		redirect = btn1,	flightDisplay
-		redirect = btn2,	fpTakeoff
-		redirect = btn3,	fpLanding
-		redirect = escape,	menuDefault
-		redirect = home,	menuDefault
+	FLIGHTPAGES{
+		CONTEXTREDIRECT
+		{
+			name = flightPageRedirects
+			redirect = btn1,	flightDisplay
+			redirect = btn2,	fpTakeoff
+			redirect = btn3,	fpLanding
+			redirect = escape,	menuDefault
+			redirect = home,	menuDefault
+		}
 	}
 	
-	CONTEXTREDIRECT
-	{
-		name = infoPageRedirects
-		redirect = btn1,	infoOrbit
-		redirect = btn2,	infoResources_1
-		redirect = btn3,	infoMission
-		redirect = btn4,	infoCrewRoster
-		redirect = btn5,	infoAltgraph
+	INFOPAGES{
+		CONTEXTREDIRECT
+		{
+			name = infoPageRedirects
+			redirect = btn1,	infoOrbit
+			redirect = btn2,	infoResources_1
+			redirect = btn3,	infoMission
+			redirect = btn4,	infoCrewRoster
+			redirect = btn5,	infoAltgraph
+			
+			redirect = escape,	menuDefault
+			redirect = home,	menuDefault
+		}
 		
-		redirect = escape,	menuDefault
-		redirect = home,	menuDefault
+		GROUP{
+			name = Resources
+			wordsOverlay = TahvohckMFD/pages/overlayPrimaryButtonsTOP.txt
+			
+			CONTEXTREDIRECT
+			{
+				redirect = btn1,	infoOrbit
+				redirect = btn2,	infoResources_1
+				redirect = btn3,	infoMission
+				redirect = btn4,	infoCrewRoster
+				redirect = btn5,	infoAltgraph
+				
+				redirect = btn6,	infoResources_common
+				redirect = btn7,	infoResources_1
+				redirect = btn8,	infoResources_2
+				redirect = btn9,	infoResources_3
+				redirect = btn10,	infoResources_?
+				
+				redirect = escape,	menuInfo
+				redirect = home,	menuDefault
+			}
+		}
 	}
 	
 	CONTEXTREDIRECT
