--- a/MFD_HYO_settings_apply.cfg
+++ b/MFD_HYO_settings_apply.cfg
@@ -7,8 +7,10 @@
 		textOverlay = #$@TahvMFDConfig/defaultWordsOverlay$
 		localMargins = #$@TahvMFDConfig/defaultMargins$
 	}
-	
-	// Apply Flight defaults
+
+// --------------------------------------------------
+// Apply settings to Flight pages
+// --------------------------------------------------
 	@PAGE[menuFlight]
 	{
 		textureURL = #$@TahvMFDConfig/defaultTextureBackground$
@@ -16,7 +18,7 @@
 		textOverlay = #$@TahvMFDConfig/defaultWordsOverlay$
 		localMargins = #$@TahvMFDConfig/defaultMargins$
 		
-		#@TahvMFDConfig/CONTEXTREDIRECT[flightPageRedirects] {}
+		#@TahvMFDConfig/FLIGHTPAGES/CONTEXTREDIRECT {}
 	}
 	@PAGE[flightDisplay]
 	{
@@ -25,7 +27,7 @@
 		textOverlay = #$@TahvMFDConfig/defaultWordsOverlay$
 		localMargins = #$@TahvMFDConfig/defaultMargins$
 		
-		#@TahvMFDConfig/CONTEXTREDIRECT[flightPageRedirects] {}
+		#@TahvMFDConfig/FLIGHTPAGES/CONTEXTREDIRECT {}
 	}
 	@PAGE[fpTakeoff]
 	{
@@ -34,7 +36,7 @@
 		textOverlay = #$@TahvMFDConfig/defaultWordsOverlay$
 		localMargins = #$@TahvMFDConfig/defaultMargins$
 		
-		#@TahvMFDConfig/CONTEXTREDIRECT[flightPageRedirects] {}
+		#@TahvMFDConfig/FLIGHTPAGES/CONTEXTREDIRECT {}
 	}
 	@PAGE[fpLanding]
 	{
@@ -43,7 +45,7 @@
 		textOverlay = #$@TahvMFDConfig/defaultWordsOverlay$
 		localMargins = #$@TahvMFDConfig/defaultMargins$
 		
-		#@TahvMFDConfig/CONTEXTREDIRECT[flightPageRedirects] {}
+		#@TahvMFDConfig/FLIGHTPAGES/CONTEXTREDIRECT {}
 	}
 }
 }
