Modularization of info pages

--- a/MFD_HYO_settings_apply.cfg
+++ b/MFD_HYO_settings_apply.cfg
@@ -47,5 +47,64 @@
 		
 		#@TahvMFDConfig/FLIGHTPAGES/CONTEXTREDIRECT {}
 	}
+// --------------------------------------------------
+// Apply  settings to info pages
+// --------------------------------------------------
+	@PAGE[menuInfo]
+	{
+		textureURL = #$@TahvMFDConfig/defaultTextureBackground$
+		textureOverlayURL = #$@TahvMFDConfig/defaultTextureOverlay$
+		textOverlay = #$@TahvMFDConfig/defaultWordsOverlay$
+		localMargins = #$@TahvMFDConfig/defaultMargins$
+		
+		#@TahvMFDConfig/INFOPAGES/CONTEXTREDIRECT {}
+	}
+	@PAGE[infoOrbit]
+	{
+		textureURL = #$@TahvMFDConfig/defaultTextureBackground$
+		textureOverlayURL = #$@TahvMFDConfig/defaultTextureOverlay$
+		textOverlay = #$@TahvMFDConfig/defaultWordsOverlay$
+		localMargins = #$@TahvMFDConfig/defaultMargins$
+		
+		#@TahvMFDConfig/INFOPAGES/CONTEXTREDIRECT {}
+	}
+	//All infoResources_* pages aren't quite the same as the other pages, mostly they have a different overlay
+	//(at some point) plus extra redirects.
+	@PAGE[infoResources_*],*
+	{
+		textureURL = #$@TahvMFDConfig/defaultTextureBackground$
+		textureOverlayURL = #$@TahvMFDConfig/defaultTextureOverlay$
+		textOverlay = #$@TahvMFDConfig/GROUP[infoPagesResources]/wordsOverlay$
+		localMargins = #$@TahvMFDConfig/defaultMargins$
+		
+		#@TahvMFDConfig/INFOPAGES/GROUP[Resources]/CONTEXTREDIRECT {}
+	}
+	@PAGE[infoMission]
+	{
+		textureURL = #$@TahvMFDConfig/defaultTextureBackground$
+		textureOverlayURL = #$@TahvMFDConfig/defaultTextureOverlay$
+		textOverlay = #$@TahvMFDConfig/defaultWordsOverlay$
+		localMargins = #$@TahvMFDConfig/defaultMargins$
+		
+		#@TahvMFDConfig/INFOPAGES/CONTEXTREDIRECT {}
+	}
+	@PAGE[infoCrewRoster]
+	{
+		textureURL = #$@TahvMFDConfig/defaultTextureBackground$
+		textureOverlayURL = #$@TahvMFDConfig/defaultTextureOverlay$
+		textOverlay = #$@TahvMFDConfig/defaultWordsOverlay$
+		localMargins = #$@TahvMFDConfig/defaultMargins$
+		
+		#@TahvMFDConfig/INFOPAGES/CONTEXTREDIRECT {}
+	}
+	@PAGE[infoAltgraph]
+	{
+		textureURL = #$@TahvMFDConfig/defaultTextureBackground$
+		textureOverlayURL = #$@TahvMFDConfig/defaultTextureOverlay$
+		textOverlay = #$@TahvMFDConfig/defaultWordsOverlay$
+		localMargins = #$@TahvMFDConfig/defaultMargins$
+		
+		#@TahvMFDConfig/INFOPAGES/CONTEXTREDIRECT {}
+	}
 }
 }
