Finishing config restructure

--- a/MFDConfig-and-code-reuse.cfg
+++ b/MFDConfig-and-code-reuse.cfg
@@ -55,29 +55,32 @@ TahvMFDConfig
 		}
 	}
 	
-	CONTEXTREDIRECT
-	{
-		name = targetPageRedirects
-		redirect = btn1,	tpSelect
-		redirect = escape,	menuDefault
-		redirect = home,	menuDefault
+	TARGETPAGES{
+		CONTEXTREDIRECT
+		{
+			name = targetPageRedirects
+			redirect = btn1,	tpSelect
+			redirect = escape,	menuDefault
+			redirect = home,	menuDefault
+		}
 	}
 	
-	CONTEXTREDIRECT
-	{
-		name = cameraPageRedirects
-		redirect = btn1,	camera1
-		redirect = btn2,	camera2
-		redirect = btn3,	camera3
-		redirect = btn4,	camera4
-		redirect = btn5,	camera5
-		redirect = btn6,	camera6
-		redirect = btn7,	camera7
-		redirect = btn8,	camera8
-		redirect = btn9,	camera9
-		redirect = btn10,	camDock
-		redirect = escape,	menuDefault
-		redirect = home,	menuDefault
+	CAMERAPAGES{
+		CONTEXTREDIRECT
+		{
+			name = cameraPageRedirects
+			redirect = btn1,	camera1
+			redirect = btn2,	camera2
+			redirect = btn3,	camera3
+			redirect = btn4,	camera4
+			redirect = btn5,	camera5
+			redirect = btn6,	camera6
+			redirect = btn7,	camera7
+			redirect = btn8,	camera8
+			redirect = btn9,	camera9
+			redirect = btn10,	camDock
+			redirect = escape,	menuDefault
+			redirect = home,	menuDefault
+		}
 	}
-	
 }
