Incorrect path fix

--- a/MFD_HYO_settings_apply.cfg
+++ b/MFD_HYO_settings_apply.cfg
@@ -74,7 +74,7 @@
 	{
 		textureURL = #$@TahvMFDConfig/defaultTextureBackground$
 		textureOverlayURL = #$@TahvMFDConfig/defaultTextureOverlay$
-		textOverlay = #$@TahvMFDConfig/GROUP[infoPagesResources]/wordsOverlay$
+		textOverlay = #$@TahvMFDConfig/INFOPAGES/GROUP[Resources]/wordsOverlay$
 		localMargins = #$@TahvMFDConfig/defaultMargins$
 		
 		#@TahvMFDConfig/INFOPAGES/GROUP[Resources]/CONTEXTREDIRECT {}
