Target pages modularization.

--- a/MFDConfig-and-code-reuse.cfg
+++ b/MFDConfig-and-code-reuse.cfg
@@ -56,12 +56,14 @@ TahvMFDConfig
 	}
 	
 	TARGETPAGES{
+		// Target pages' redirects put escape and home at the top so we can easily remove the escape key on one
+		// of the pages. May change all redirects to this format.
 		CONTEXTREDIRECT
 		{
 			name = targetPageRedirects
-			redirect = btn1,	tpSelect
 			redirect = escape,	menuDefault
 			redirect = home,	menuDefault
+			redirect = btn1,	tpSelect
 		}
 	}
 	
