--- a/MFD_HYO_settings_apply.cfg
+++ b/MFD_HYO_settings_apply.cfg
@@ -106,5 +106,30 @@
 		
 		#@TahvMFDConfig/INFOPAGES/CONTEXTREDIRECT {}
 	}
+// --------------------------------------------------
+// Apply  settings to target pages
+// --------------------------------------------------
+	@PAGE[menuTarget]
+	{
+		textureURL = #$@TahvMFDConfig/defaultTextureBackground$
+		textureOverlayURL = #$@TahvMFDConfig/defaultTextureOverlay$
+		textOverlay = #$@TahvMFDConfig/defaultWordsOverlay$
+		localMargins = #$@TahvMFDConfig/defaultMargins$
+		
+		#@TahvMFDConfig/TARGETPAGES/CONTEXTREDIRECT {}
+	}
+	@PAGE[tpSelect]
+	{
+		textureURL = #$@TahvMFDConfig/defaultTextureBackground$
+		textureOverlayURL = #$@TahvMFDConfig/defaultTextureOverlay$
+		textOverlay = #$@TahvMFDConfig/defaultWordsOverlay$
+		localMargins = #$@TahvMFDConfig/defaultMargins$
+		
+		#@TahvMFDConfig/TARGETPAGES/CONTEXTREDIRECT {}
+		//Need to use the BACK key in the page handler
+		@CONTEXTREDIRECT{
+			-redirect,0 = ""
+		}
+	}
 }
 }
