Camera pages modularization

--- a/MFDConfig-and-code-reuse.cfg
+++ b/MFDConfig-and-code-reuse.cfg
@@ -68,6 +68,11 @@ TahvMFDConfig
 	}
 	
 	CAMERAPAGES{
+		zoomFov = 5,45,8
+		zoomButtons = 1,0
+		OverlayImage = Hyomoto/MFD/images/dockingOverlay
+		textOverlay = TahvohckMFD/pages/overlayCAMERAS.txt
+		
 		CONTEXTREDIRECT
 		{
 			name = cameraPageRedirects
