--- a/MFD_HYO_settings_apply.cfg
+++ b/MFD_HYO_settings_apply.cfg
@@ -131,5 +131,39 @@
 			-redirect,0 = ""
 		}
 	}
+// --------------------------------------------------
+// Apply  settings to camera pages
+// --------------------------------------------------
+	@PAGE[menuCameras]
+	{
+		textureURL = #$@TahvMFDConfig/defaultTextureBackground$
+		textureOverlayURL = #$@TahvMFDConfig/defaultTextureOverlay$
+		
+		#@TahvMFDConfig/CAMERAPAGES/CONTEXTREDIRECT {}
+	}
+	@PAGE[camera?],*
+	{
+		textureURL = #$@TahvMFDConfig/defaultTextureBackground$
+		textureOverlayURL = #$@TahvMFDConfig/CAMERAPAGES/OverlayImage$
+		textOverlay = #$@TahvMFDConfig/CAMERAPAGES/textOverlay$
+		localMargins = #$@TahvMFDConfig/defaultMargins$
+		
+		zoomFov = #$@TahvMFDConfig/CAMERAPAGES/zoomFov$
+		zoomButtons = #$@TahvMFDConfig/CAMERAPAGES/zoomButtons$
+		
+		#@TahvMFDConfig/CAMERAPAGES/CONTEXTREDIRECT {}
+	}
+	@PAGE[camDock]
+	{
+		textureURL = #$@TahvMFDConfig/defaultTextureBackground$
+		textureOverlayURL = #$@TahvMFDConfig/CAMERAPAGES/OverlayImage$
+		textOverlay = #$@TahvMFDConfig/CAMERAPAGES/textOverlay$
+		localMargins = #$@TahvMFDConfig/defaultMargins$
+		
+		zoomFov = #$@TahvMFDConfig/CAMERAPAGES/zoomFov$
+		zoomButtons = #$@TahvMFDConfig/CAMERAPAGES/zoomButtons$
+		
+		#@TahvMFDConfig/CAMERAPAGES/CONTEXTREDIRECT {}
+	}
 }
 }
