--- a/MFDConfig-and-code-reuse.cfg
+++ b/MFDConfig-and-code-reuse.cfg
@@ -4,6 +4,7 @@ TahvMFDConfig
 	defaultTextureBackground = Hyomoto/MFD/images/genericBg
 	defaultWordsOverlay = TahvohckMFD/pages/overlayPrimaryButtonsTOP.txt
 	defaultMargins = 0,1,0,0
+	noSwitchTo = btn1, btn2, btn3, btn4, btn5, btn6, btn7, btn8, btn9, btn10, up, down, enter, escape, home
 	
 	FLIGHTPAGES{
 		CONTEXTREDIRECT
