Apply disableSwitchingTo globally

--- a/MFD_HYO_settings_apply.cfg
+++ b/MFD_HYO_settings_apply.cfg
@@ -1,5 +1,9 @@
 @PROP[TahvohckMFD_HyomotoBase]:FOR[TAHVOHCKMFD]{
 @MODULE[RasterPropMonitor]{
+	@PAGE,*
+	{
+		disableSwitchingTo = #$@TahvMFDConfig/noSwitchTo$
+	}
 	@PAGE[menuDefault]
 	{
 		textureURL = #$@TahvMFDConfig/defaultTextureBackground$
