--- a/MFD_HYO_settings_apply.cfg
+++ b/MFD_HYO_settings_apply.cfg
@@ -1,15 +1,19 @@
 @PROP[TahvohckMFD_HyomotoBase]:FOR[TAHVOHCKMFD]{
 @MODULE[RasterPropMonitor]{
-	@PAGE,*
+	
+	// Global apply. VERY DANGEROUS, IN CASE THAT'S NOT OBVIOUS.
+	// Skips the badRedirect pages, though.
+	@PAGE:HAS[~text[Hyomoto/MFD/pages/badRedirect.txt]]
 	{
 		disableSwitchingTo = #$@TahvMFDConfig/noSwitchTo$
-	}
-	@PAGE[menuDefault]
-	{
+		
 		textureURL = #$@TahvMFDConfig/defaultTextureBackground$
 		textureOverlayURL = #$@TahvMFDConfig/defaultTextureOverlay$
 		textOverlay = #$@TahvMFDConfig/defaultWordsOverlay$
 		localMargins = #$@TahvMFDConfig/defaultMargins$
+	}
+	@PAGE[menuDefault]
+	{
 	}
 
 // --------------------------------------------------
@@ -17,38 +21,18 @@
 // --------------------------------------------------
 	@PAGE[menuFlight]
 	{
-		textureURL = #$@TahvMFDConfig/defaultTextureBackground$
-		textureOverlayURL = #$@TahvMFDConfig/defaultTextureOverlay$
-		textOverlay = #$@TahvMFDConfig/defaultWordsOverlay$
-		localMargins = #$@TahvMFDConfig/defaultMargins$
-		
 		#@TahvMFDConfig/FLIGHTPAGES/CONTEXTREDIRECT {}
 	}
 	@PAGE[flightDisplay]
 	{
-		textureURL = #$@TahvMFDConfig/defaultTextureBackground$
-		textureOverlayURL = #$@TahvMFDConfig/defaultTextureOverlay$
-		textOverlay = #$@TahvMFDConfig/defaultWordsOverlay$
-		localMargins = #$@TahvMFDConfig/defaultMargins$
-		
 		#@TahvMFDConfig/FLIGHTPAGES/CONTEXTREDIRECT {}
 	}
 	@PAGE[fpTakeoff]
 	{
-		textureURL = #$@TahvMFDConfig/defaultTextureBackground$
-		textureOverlayURL = #$@TahvMFDConfig/defaultTextureOverlay$
-		textOverlay = #$@TahvMFDConfig/defaultWordsOverlay$
-		localMargins = #$@TahvMFDConfig/defaultMargins$
-		
 		#@TahvMFDConfig/FLIGHTPAGES/CONTEXTREDIRECT {}
 	}
 	@PAGE[fpLanding]
 	{
-		textureURL = #$@TahvMFDConfig/defaultTextureBackground$
-		textureOverlayURL = #$@TahvMFDConfig/defaultTextureOverlay$
-		textOverlay = #$@TahvMFDConfig/defaultWordsOverlay$
-		localMargins = #$@TahvMFDConfig/defaultMargins$
-		
 		#@TahvMFDConfig/FLIGHTPAGES/CONTEXTREDIRECT {}
 	}
 // --------------------------------------------------
@@ -56,58 +40,30 @@
 // --------------------------------------------------
 	@PAGE[menuInfo]
 	{
-		textureURL = #$@TahvMFDConfig/defaultTextureBackground$
-		textureOverlayURL = #$@TahvMFDConfig/defaultTextureOverlay$
-		textOverlay = #$@TahvMFDConfig/defaultWordsOverlay$
-		localMargins = #$@TahvMFDConfig/defaultMargins$
-		
 		#@TahvMFDConfig/INFOPAGES/CONTEXTREDIRECT {}
 	}
 	@PAGE[infoOrbit]
 	{
-		textureURL = #$@TahvMFDConfig/defaultTextureBackground$
-		textureOverlayURL = #$@TahvMFDConfig/defaultTextureOverlay$
-		textOverlay = #$@TahvMFDConfig/defaultWordsOverlay$
-		localMargins = #$@TahvMFDConfig/defaultMargins$
-		
 		#@TahvMFDConfig/INFOPAGES/CONTEXTREDIRECT {}
 	}
 	//All infoResources_* pages aren't quite the same as the other pages, mostly they have a different overlay
 	//(at some point) plus extra redirects.
 	@PAGE[infoResources_*],*
 	{
-		textureURL = #$@TahvMFDConfig/defaultTextureBackground$
-		textureOverlayURL = #$@TahvMFDConfig/defaultTextureOverlay$
-		textOverlay = #$@TahvMFDConfig/INFOPAGES/GROUP[Resources]/wordsOverlay$
-		localMargins = #$@TahvMFDConfig/defaultMargins$
+		@textOverlay = #$@TahvMFDConfig/INFOPAGES/GROUP[Resources]/wordsOverlay$
 		
 		#@TahvMFDConfig/INFOPAGES/GROUP[Resources]/CONTEXTREDIRECT {}
 	}
 	@PAGE[infoMission]
 	{
-		textureURL = #$@TahvMFDConfig/defaultTextureBackground$
-		textureOverlayURL = #$@TahvMFDConfig/defaultTextureOverlay$
-		textOverlay = #$@TahvMFDConfig/defaultWordsOverlay$
-		localMargins = #$@TahvMFDConfig/defaultMargins$
-		
 		#@TahvMFDConfig/INFOPAGES/CONTEXTREDIRECT {}
 	}
 	@PAGE[infoCrewRoster]
 	{
-		textureURL = #$@TahvMFDConfig/defaultTextureBackground$
-		textureOverlayURL = #$@TahvMFDConfig/defaultTextureOverlay$
-		textOverlay = #$@TahvMFDConfig/defaultWordsOverlay$
-		localMargins = #$@TahvMFDConfig/defaultMargins$
-		
 		#@TahvMFDConfig/INFOPAGES/CONTEXTREDIRECT {}
 	}
 	@PAGE[infoAltgraph]
 	{
-		textureURL = #$@TahvMFDConfig/defaultTextureBackground$
-		textureOverlayURL = #$@TahvMFDConfig/defaultTextureOverlay$
-		textOverlay = #$@TahvMFDConfig/defaultWordsOverlay$
-		localMargins = #$@TahvMFDConfig/defaultMargins$
-		
 		#@TahvMFDConfig/INFOPAGES/CONTEXTREDIRECT {}
 	}
 // --------------------------------------------------
@@ -115,20 +71,10 @@
 // --------------------------------------------------
 	@PAGE[menuTarget]
 	{
-		textureURL = #$@TahvMFDConfig/defaultTextureBackground$
-		textureOverlayURL = #$@TahvMFDConfig/defaultTextureOverlay$
-		textOverlay = #$@TahvMFDConfig/defaultWordsOverlay$
-		localMargins = #$@TahvMFDConfig/defaultMargins$
-		
 		#@TahvMFDConfig/TARGETPAGES/CONTEXTREDIRECT {}
 	}
 	@PAGE[tpSelect]
 	{
-		textureURL = #$@TahvMFDConfig/defaultTextureBackground$
-		textureOverlayURL = #$@TahvMFDConfig/defaultTextureOverlay$
-		textOverlay = #$@TahvMFDConfig/defaultWordsOverlay$
-		localMargins = #$@TahvMFDConfig/defaultMargins$
-		
 		#@TahvMFDConfig/TARGETPAGES/CONTEXTREDIRECT {}
 		//Need to use the BACK key in the page handler
 		@CONTEXTREDIRECT{
@@ -147,10 +93,8 @@
 	}
 	@PAGE[camera?],*
 	{
-		textureURL = #$@TahvMFDConfig/defaultTextureBackground$
-		textureOverlayURL = #$@TahvMFDConfig/CAMERAPAGES/OverlayImage$
-		textOverlay = #$@TahvMFDConfig/CAMERAPAGES/textOverlay$
-		localMargins = #$@TahvMFDConfig/defaultMargins$
+		@textureOverlayURL = #$@TahvMFDConfig/CAMERAPAGES/OverlayImage$
+		@textOverlay = #$@TahvMFDConfig/CAMERAPAGES/textOverlay$
 		
 		zoomFov = #$@TahvMFDConfig/CAMERAPAGES/zoomFov$
 		zoomButtons = #$@TahvMFDConfig/CAMERAPAGES/zoomButtons$
@@ -159,10 +103,8 @@
 	}
 	@PAGE[camDock]
 	{
-		textureURL = #$@TahvMFDConfig/defaultTextureBackground$
-		textureOverlayURL = #$@TahvMFDConfig/CAMERAPAGES/OverlayImage$
-		textOverlay = #$@TahvMFDConfig/CAMERAPAGES/textOverlay$
-		localMargins = #$@TahvMFDConfig/defaultMargins$
+		@textureOverlayURL = #$@TahvMFDConfig/CAMERAPAGES/OverlayImage$
+		@textOverlay = #$@TahvMFDConfig/CAMERAPAGES/textOverlay$
 		
 		zoomFov = #$@TahvMFDConfig/CAMERAPAGES/zoomFov$
 		zoomButtons = #$@TahvMFDConfig/CAMERAPAGES/zoomButtons$
