Changed all (almost) CONTEXTREDIRECTs to the TARGETPAGES format

--- a/MFDConfig-and-code-reuse.cfg
+++ b/MFDConfig-and-code-reuse.cfg
@@ -9,25 +9,26 @@ TahvMFDConfig
 	FLIGHTPAGES{
 		CONTEXTREDIRECT
 		{
+			redirect = escape,	menuDefault
+			redirect = home,	menuDefault
+			
 			redirect = btn1,	flightDisplay
 			redirect = btn2,	fpTakeoff
 			redirect = btn3,	fpLanding
-			redirect = escape,	menuDefault
-			redirect = home,	menuDefault
 		}
 	}
 	
 	INFOPAGES{
 		CONTEXTREDIRECT
 		{
+			redirect = escape,	menuDefault
+			redirect = home,	menuDefault
+			
 			redirect = btn1,	infoOrbit
 			redirect = btn2,	infoResources_1
 			redirect = btn3,	infoMission
 			redirect = btn4,	infoCrewRoster
 			redirect = btn5,	infoAltgraph
-			
-			redirect = escape,	menuDefault
-			redirect = home,	menuDefault
 		}
 		
 		GROUP{
@@ -56,11 +57,12 @@ TahvMFDConfig
 	
 	TARGETPAGES{
 		// Target pages' redirects put escape and home at the top so we can easily remove the escape key on one
-		// of the pages. May change all redirects to this format.
+		// of the pages. Have changed all redirects to this format.
 		CONTEXTREDIRECT
 		{
 			redirect = escape,	menuDefault
 			redirect = home,	menuDefault
+			
 			redirect = btn1,	tpSelect
 		}
 	}
@@ -73,6 +75,9 @@ TahvMFDConfig
 		
 		CONTEXTREDIRECT
 		{
+			redirect = escape,	menuDefault
+			redirect = home,	menuDefault
+			
 			redirect = btn1,	camera1
 			redirect = btn2,	camera2
 			redirect = btn3,	camera3
@@ -83,8 +88,6 @@ TahvMFDConfig
 			redirect = btn8,	camera8
 			redirect = btn9,	camera9
 			redirect = btn10,	camDock
-			redirect = escape,	menuDefault
-			redirect = home,	menuDefault
 		}
 	}
 }
