Made pages escape to their previous level.

--- a/MFDConfig-and-code-reuse.cfg
+++ b/MFDConfig-and-code-reuse.cfg
@@ -9,7 +9,7 @@ TahvMFDConfig
 	FLIGHTPAGES{
 		CONTEXTREDIRECT
 		{
-			redirect = escape,	menuDefault
+			redirect = escape,	menuFlight
 			redirect = home,	menuDefault
 			
 			redirect = btn1,	flightDisplay
@@ -21,7 +21,7 @@ TahvMFDConfig
 	INFOPAGES{
 		CONTEXTREDIRECT
 		{
-			redirect = escape,	menuDefault
+			redirect = escape,	menuInfo
 			redirect = home,	menuDefault
 			
 			redirect = btn1,	infoOrbit
@@ -60,7 +60,7 @@ TahvMFDConfig
 		// of the pages. Have changed all redirects to this format.
 		CONTEXTREDIRECT
 		{
-			redirect = escape,	menuDefault
+			redirect = escape,	menuTarget
 			redirect = home,	menuDefault
 			
 			redirect = btn1,	tpSelect
@@ -75,7 +75,7 @@ TahvMFDConfig
 		
 		CONTEXTREDIRECT
 		{
-			redirect = escape,	menuDefault
+			redirect = escape,	menuCameras
 			redirect = home,	menuDefault
 			
 			redirect = btn1,	camera1
