--- a/MFD_HYO_settings_apply.cfg
+++ b/MFD_HYO_settings_apply.cfg
@@ -19,6 +19,9 @@
 	@PAGE[menuFlight]
 	{
 		#@TahvMFDConfig/FLIGHTPAGES/CONTEXTREDIRECT {}
+		@CONTEXTREDIRECT{
+			@redirect,0 = escape,	menuDefault
+		}
 	}
 	@PAGE[flightDisplay]
 	{
@@ -38,6 +41,9 @@
 	@PAGE[menuInfo]
 	{
 		#@TahvMFDConfig/INFOPAGES/CONTEXTREDIRECT {}
+		@CONTEXTREDIRECT{
+			@redirect,0 = escape,	menuDefault
+		}
 	}
 	@PAGE[infoOrbit]
 	{
@@ -69,6 +75,9 @@
 	@PAGE[menuTarget]
 	{
 		#@TahvMFDConfig/TARGETPAGES/CONTEXTREDIRECT {}
+		@CONTEXTREDIRECT{
+			@redirect,0 = escape,	menuDefault
+		}
 	}
 	@PAGE[tpSelect]
 	{
@@ -87,6 +96,9 @@
 		textureOverlayURL = #$@TahvMFDConfig/defaultTextureOverlay$
 		
 		#@TahvMFDConfig/CAMERAPAGES/CONTEXTREDIRECT {}
+		@CONTEXTREDIRECT{
+			@redirect,0 = escape,	menuDefault
+		}
 	}
 	@PAGE[camera?],*
 	{
