--- a/MFD_HYO_settings_apply.cfg
+++ b/MFD_HYO_settings_apply.cfg
@@ -14,6 +14,15 @@
 	}
 
 // --------------------------------------------------
+// Edit home screen: The global apply does a few things that prevents 
+// setting these in the skeleton
+// --------------------------------------------------
+	@PAGE[menuDefault]
+	{
+		@textOverlay = TahvohckMFD/pages/overlayHomeScreen.txt
+	}
+
+// --------------------------------------------------
 // Apply settings to Flight pages
 // --------------------------------------------------
 	@PAGE[menuFlight]
