(ab)using the RPM 0.21.1 ability to have multiple CONTEXTREDIRECT nodes
I mean hey, I'm the one that asked for it, I better use it.

--- a/MFD_HYO_settings_apply.cfg
+++ b/MFD_HYO_settings_apply.cfg
@@ -64,6 +64,7 @@
 	{
 		@textOverlay = #$@TahvMFDConfig/INFOPAGES/GROUP[Resources]/wordsOverlay$
 		
+		#@TahvMFDConfig/INFOPAGES/CONTEXTREDIRECT {}
 		#@TahvMFDConfig/INFOPAGES/GROUP[Resources]/CONTEXTREDIRECT {}
 	}
 	@PAGE[infoMission]
