Sleep page also shouldn't get global patches.

--- a/MFD_HYO_settings_apply.cfg
+++ b/MFD_HYO_settings_apply.cfg
@@ -2,8 +2,8 @@
 @MODULE[RasterPropMonitor]{
 	
 	// Global apply. VERY DANGEROUS, IN CASE THAT'S NOT OBVIOUS.
-	// Skips the badRedirect pages, though.
-	@PAGE:HAS[~text[Hyomoto/MFD/pages/badRedirect.txt]]
+	// Skips the badRedirect and sleep pages, though.
+	@PAGE:HAS[~text[Hyomoto/MFD/pages/badRedirect.txt]&~name[sleepPage]]
 	{
 		disableSwitchingTo = #$@TahvMFDConfig/noSwitchTo$
 		
