Prepping color tags for STOREDSTRING use (instead of redefining every time)

--- a/MFDConfig-and-code-reuse.cfg
+++ b/MFDConfig-and-code-reuse.cfg
@@ -6,6 +6,9 @@ TahvMFDConfig
 	defaultMargins = 0,1,0,0
 	noSwitchTo = btn1, btn2, btn3, btn4, btn5, btn6, btn7, btn8, btn9, btn10, up, down, enter, escape, home
 	
+	colorTagDefault =	[#ffffff]
+	colorTagHighlight =	[#7777ff]
+	
 	FLIGHTPAGES{
 		CONTEXTREDIRECT
 		{
