--- a/MFD_HYO_settings_apply.cfg
+++ b/MFD_HYO_settings_apply.cfg
@@ -1,5 +1,7 @@
 @PROP[TahvohckMFD_HyomotoBase]:FOR[TAHVOHCKMFD]{
 @MODULE[RasterPropMonitor]{
+
+	storedStrings = #@$TahvMFDConfig/colorTagHighlight$, #@$TahvMFDConfig/colorTagDefault$
 	
 	// Global apply. VERY DANGEROUS, IN CASE THAT'S NOT OBVIOUS.
 	// Skips the badRedirect and sleep pages, though.
