Making the common resources page the default one.
Makes... a bit more sense, at least.

--- a/MFDConfig-and-code-reuse.cfg
+++ b/MFDConfig-and-code-reuse.cfg
@@ -28,7 +28,7 @@ TahvMFDConfig
 			redirect = home,	menuDefault
 			
 			redirect = btn1,	infoOrbit
-			redirect = btn2,	infoResources_1
+			redirect = btn2,	infoResources_common
 			redirect = btn3,	infoMission
 			redirect = btn4,	infoCrewRoster
 			redirect = btn5,	infoAltgraph
