Fixing sleepPage redirects
Aligned, set "menuCamera" to "menuCameras", set "top" to "home", since I
apparently changed that a while ago and never fixed it back.

--- a/MFD60x30_Skeleton.cfg
+++ b/MFD60x30_Skeleton.cfg
@@ -50,26 +50,26 @@ MODULE
 		
 		CONTEXTREDIRECT
 		{
-			redirect = menuFlight,	menuDefault
-			redirect = menuInfo,	menuDefault
-			redirect = menuCamera,	menuDefault
-			redirect = menuTarget,	menuDefault
-			redirect = menuPlugin,	menuDefault
-			redirect = btn1,	menuDefault
-			redirect = btn2,	menuDefault
-			redirect = btn3,	menuDefault
-			redirect = btn4,	menuDefault
-			redirect = btn5,	menuDefault
-			redirect = btn6,	menuDefault
-			redirect = btn7,	menuDefault
-			redirect = btn8,	menuDefault
-			redirect = btn9,	menuDefault
-			redirect = btn10,	menuDefault
-			redirect = up,		menuDefault
-			redirect = down,	menuDefault
-			redirect = enter,	menuDefault
-			redirect = escape,	menuDefault
-			redirect = top,		menuDefault
+			redirect = menuFlight,		menuDefault
+			redirect = menuInfo,		menuDefault
+			redirect = menuCameras,		menuDefault
+			redirect = menuTarget,		menuDefault
+			redirect = menuPlugin,		menuDefault
+			redirect = btn1,			menuDefault
+			redirect = btn2,			menuDefault
+			redirect = btn3,			menuDefault
+			redirect = btn4,			menuDefault
+			redirect = btn5,			menuDefault
+			redirect = btn6,			menuDefault
+			redirect = btn7,			menuDefault
+			redirect = btn8,			menuDefault
+			redirect = btn9,			menuDefault
+			redirect = btn10,			menuDefault
+			redirect = up,				menuDefault
+			redirect = down,			menuDefault
+			redirect = enter,			menuDefault
+			redirect = escape,			menuDefault
+			redirect = home,			menuDefault
 		}
 	}
 
