Making subpage CONTEXTREDIRECT nodes easier to identify.

--- a/MFDConfig-and-code-reuse.cfg
+++ b/MFDConfig-and-code-reuse.cfg
@@ -40,6 +40,7 @@ TahvMFDConfig
 			
 			CONTEXTREDIRECT
 			{
+				name = subpages
 				redirect = btn6,	infoResources_common
 				redirect = btn7,	infoResources_1
 				redirect = btn8,	infoResources_2
