Prepping orbit page for actual use.
Renamed page to infoOrbitData
Added subpage redirects in both relevant files
Setting small orbit map to its actual position
Adding orbit page

--- a/MFDConfig-and-code-reuse.cfg
+++ b/MFDConfig-and-code-reuse.cfg
@@ -27,11 +27,21 @@ TahvMFDConfig
 			redirect = escape,	menuInfo
 			redirect = home,	menuDefault
 			
-			redirect = btn1,	infoOrbit
+			redirect = btn1,	infoOrbitData
 			redirect = btn2,	infoResources_common
 			redirect = btn3,	infoMission
 			redirect = btn4,	infoCrewRoster
 			redirect = btn5,	infoAltgraph
+		}
+		
+		GROUP{
+			name = Orbit
+			CONTEXREDIRECT
+			{
+				name = subpages
+				redirect = btn6,	infoOrbitData
+				redirect = btn7,	infoOrbitMap
+			}
 		}
 		
 		GROUP{
