--- a/MFD_HYO_settings_apply.cfg
+++ b/MFD_HYO_settings_apply.cfg
@@ -56,9 +56,10 @@
 			@redirect,0 = escape,	menuDefault
 		}
 	}
-	@PAGE[infoOrbit]
+	@PAGE[infoOrbitData]
 	{
 		#@TahvMFDConfig/INFOPAGES/CONTEXTREDIRECT {}
+		#@TahvMFDConfig/INFOPAGES/GROUP[Orbit]/CONTEXTREDIRECT {}
 	}
 	//All infoResources_* pages aren't quite the same as the other pages, mostly they have a different overlay
 	//(at some point) plus extra redirects.
