--- a/MFD60x30_Skeleton.cfg
+++ b/MFD60x30_Skeleton.cfg
@@ -138,8 +138,8 @@ MODULE
 	
 	PAGE // Orbit data
 	{
-		name = infoOrbit
-		text = Hyomoto/MFD/pages/infoOrbit.txt
+		name = infoOrbitData
+		text = TahvohckMFD/pages/infoPageOrbitData.txt
 		
 		BACKGROUNDHANDLER
 		{
@@ -160,7 +160,7 @@ MODULE
 			iconShadowShift = 1
 			
 			orbitPoints = 60
-			orbitDisplayPosition = 320,320,310,310
+			orbitDisplayPosition = 480,480,480,448
 		}
 	}
 	
