--- a/MFDConfig-and-code-reuse.cfg
+++ b/MFDConfig-and-code-reuse.cfg
@@ -36,7 +36,7 @@ TahvMFDConfig
 		
 		GROUP{
 			name = Orbit
-			CONTEXREDIRECT
+			CONTEXTREDIRECT
 			{
 				name = subpages
 				redirect = btn6,	infoOrbitData
